Remodel the front page a bit Add modular footer

--- a/Webstack/client/app/main/main.html
+++ b/Webstack/client/app/main/main.html
@@ -2,27 +2,32 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <h1>@Table</h1>
+    <p class="lead">Reinventing ordering in reality!</p>
+    <!-- <img src="assets/images/yeoman.png" alt="I'm Yeoman"> -->
   </div>
 </header>
 
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
-    </div>
+      <div class="text-center">
+        <h1 class="page-header">Are you a ...?</h1>
+        <div class="row">
+          <div class="col-lg-3">
+          </div>
+          <div class="col-lg-3">
+            <a class="btn btn-default btn-block" href="/customer">Customer</a>
+          </div>
+          <div class="col-lg-3">
+            <a class="btn btn-default btn-block" href="/service">Business</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
+      <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
+    </ul> -->
   </div>
 </div>
-
-<footer class="footer">
-  <div class="container">
-      <p>Angular Fullstack v2.0.13 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
-  </div>
-</footer>
+</div>
