--- a/Webstack/client/index.html
+++ b/Webstack/client/index.html
@@ -36,6 +36,8 @@
     <!-- Add your site or application content here -->
     <div ng-view=""></div>
 
+    <div ng-include="'components/footer/footer.html'"></div>
+    
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
