--- a/Webstack/client/index.html
+++ b/Webstack/client/index.html
@@ -77,6 +77,8 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/business/business.controller.js"></script>
+          <script src="app/business/business.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="components/auth/auth.service.js"></script>
