--- a/Webstack/client/app/business/business.html
+++ b/Webstack/client/app/business/business.html
@@ -1,12 +1,13 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
+
 <div class="container">
-  <p>The delete user and user index api routes are restricted to users with the 'admin' role.</p>
+  <p>Listing all businesses is restricted to the admin role.</p>
+  New Business Name: <input type="text" ng-model="newBusinessName">
+  <a ng-click="createBusiness()"><span class="glyphicon glyphicon-plus pull-right"></span></a>
   <ul class="list-group">
-    <li class="list-group-item" ng-repeat="user in users">
-        <strong>{{user.name}}</strong><br>
-        <span class="text-muted">{{user.email}}</span>
-        <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
+    <li class="list-group-item" ng-repeat="business in businesses">
+        <strong>{{business.name}}</strong><br>
     </li>
   </ul>
 </div>
