--- a/Webstack/client/index.html
+++ b/Webstack/client/index.html
@@ -79,6 +79,8 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/business/business.controller.js"></script>
           <script src="app/business/business.js"></script>
+          <script src="app/dashboard/dashboard.controller.js"></script>
+          <script src="app/dashboard/dashboard.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="components/auth/auth.service.js"></script>
