Add socket.io stuff. Untested

--- a/Webstack/client/index.html
+++ b/Webstack/client/index.html
@@ -65,6 +65,7 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/qrcode-generator/js/qrcode.js"></script>
       <script src="bower_components/angular-qrcode/qrcode.js"></script>
+      <script src="bower_components/angular-socket-io/socket.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
@@ -79,6 +80,7 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/business/business.controller.js"></script>
           <script src="app/business/business.js"></script>
+          <script src="app/business/create/create.controller.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.js"></script>
           <script src="app/main/main.controller.js"></script>
@@ -88,6 +90,7 @@
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
