--- a/Webstack/client/index.html
+++ b/Webstack/client/index.html
@@ -25,6 +25,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="components/modal/modal.css">
+      <link rel="stylesheet" href="components/print/print.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
@@ -81,6 +82,7 @@
           <script src="app/business/business.controller.js"></script>
           <script src="app/business/business.js"></script>
           <script src="app/business/create/create.controller.js"></script>
+          <script src="app/business/detail/detail.controller.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.js"></script>
           <script src="app/main/main.controller.js"></script>
@@ -90,6 +92,7 @@
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/print/print.directive.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
