--- a/Webstack/client/app/business/create/create.html
+++ b/Webstack/client/app/business/create/create.html
@@ -11,7 +11,7 @@
 
       <div class="input-group col-md-offset-1 col-md-4">
         <input type="text" class="form-control" placeholder="Table Name" ng-model="table.name" />
-        <span class="btn input-group-addon glyphicon-trash"></span>
+        <span class="btn input-group-addon glyphicon glyphicon-trash" ng-click="trashTable(table)"></span>
       </div>
   </div>
   <div class="form-group">
