Some more printing fiddling

--- a/Webstack/client/app/business/detail/detail.html
+++ b/Webstack/client/app/business/detail/detail.html
@@ -23,7 +23,7 @@
     </div>
     <!-- Hide this as long as not explicity asked to show-->
     <div class="panel-body" ng-show="showQR">
-      <div id="qrcodes">
+      <div class="" id="qrcodes">
         <div class="row" ng-repeat="qrRow in qrData">
           <div class="col-md-4" ng-repeat="qr in qrRow">
             {{qr.name}}
