Make printing work

--- a/Webstack/client/index.html
+++ b/Webstack/client/index.html
@@ -82,6 +82,8 @@
           <script src="app/business/business.js"></script>
           <script src="app/business/create/create.controller.js"></script>
           <script src="app/business/detail/detail.controller.js"></script>
+          <script src="app/business/detail/print.controller.js"></script>
+          <script src="app/business/detail/print.directive.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.js"></script>
           <script src="app/main/main.controller.js"></script>
@@ -91,7 +93,6 @@
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
-          <script src="components/print/print.directive.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
