Client side adding of menu creation

--- a/Webstack/client/index.html
+++ b/Webstack/client/index.html
@@ -66,6 +66,8 @@
       <script src="bower_components/qrcode-generator/js/qrcode.js"></script>
       <script src="bower_components/angular-qrcode/qrcode.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
+      <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+      <script src="bower_components/ng-file-upload-shim/ng-file-upload-shim.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
