--- a/Webstack/client/app/business/create/create.html
+++ b/Webstack/client/app/business/create/create.html
@@ -1,30 +1,75 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
-
 <div class="container">
-<form class="form-horizontal" ng-submit="createBusiness()">
-  <div class="form-group">
-    <div class="col-md-6">
-      <input id="inputBusinessName" class="form-control" type="text" placeholder="Business Name" ng-model="newBusinessName" />
-    </div>
-  </div>
-  <div class="form-group" ng-repeat="table in tables">
-
-      <div class="input-group col-md-offset-1 col-md-4">
-        <input type="text" class="form-control" placeholder="Table Name" ng-model="table.name" />
-        <span class="btn input-group-addon glyphicon glyphicon-trash" ng-click="trashTable(table)"></span>
+  <form class="form-horizontal" ng-submit="createBusiness()">
+    <!--Business Name and Table side-->
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <div class="col-md-10">
+            <input class="form-control" type="text" placeholder="Business Name" ng-model="newBusinessName" />
+          </div>
+        </div>
+        <!--Tables -->
+        <div class="form-group" ng-repeat="table in tables">
+          <div class="input-group col-md-offset-1 col-md-6">
+            <input type="text" class="form-control" placeholder="Table Name" ng-model="table.name" />
+            <span class="btn input-group-addon glyphicon glyphicon-trash" ng-click="trashTable(table)"></span>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-md-2">
+            <input type="number" class="form-control" ng-model="nTableCount" />
+          </div>
+          <input class="btn btn-primary" type="button" value="Add {{nTableCount}} Table/s" ng-click="addTables()" />
+        </div>
       </div>
-  </div>
-  <div class="form-group">
-    <div class="col-md-1"> 
-    <input type="number" class="form-control" ng-model="nTableCount" />
+      <!--Menu visualization setup-->
+      <div class="col-md-4">
+        <!--Menu items visualization-->
+        <ul class="list-group" ng-repeat="menuI in menu">
+          <li class="list-group-item clearfix">
+            <div class="col-md-8">
+              <p>Name: {{menuI.name}}
+              <br/>Description: {{menuI.desc}}
+              <br/>Price: {{menuI.price | currency:"&#8361;"}}
+              </p>
+            </div>
+            <img ngf-src="menuI.picture[0]" ngf-accept="'.jpg,.png'" width='100px' height='100px' alt="" />
+          </li>
+        </ul>
+        <!--New Menu Item creation-->
+        <div class="form-group">
+          <input class="form-control" type="text" placeholder="Menu Item Name" ng-model="menuIName" />
+        </div>
+        <div class="form-group">
+          <textarea class="form-control" rows="3" placeholder="Menu Item Description" ng-model="menuIDesc" />
+        </div>
+        <div class="form-group">
+          <div class="col-md-6">
+          <div ngf-drop ngf-select ng-model="menuIPic" class="drop-box" 
+              ngf-drag-over-class="dragover" ngf-multiple="false" ngf-allow-dir="false"
+              ngf-accept="'.jpg,.png'" ngf-max-size='524288'>Click or drop image (jpg or png) here. <br/> For optimal results, use square image. (Max Size 512KB)</div>
+          <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
+          </div>
+          <img ng-show='isMIPicture()' ngf-src="menuIPic[0]" ngf-accept="'.jpg,.png'" width='160px' height='160px'>
+        </div>
+        <div class="form-group">
+          <div class="col-md-4">
+            <input class="form-control" type="number" placeholder="Price" ng-model="menuIPrice" />
+          </div>
+          <input class="btn btn-primary" type="button" value="Add Menu Item" ng-click="addMenuI()" />
+        </div>
+      </div>
     </div>
-    <input class="btn btn-primary" type="button" value="Add {{nTableCount}} Table/s" ng-click="addTables()" />
-  </div>
-  <div class="form-group">
-    <div class="col-md-1"> 
-    <input class="btn btn-default" type="button" value="Reset" ng-click="reset()" />
+    <!--Separator followed by whole page controls reset/submit-->
+    <div class="row">
+      <div class="page-header"></div>
+      <div class="form-group">
+        <div class="col-md-1">
+          <input class="btn btn-default" type="button" value="Reset" ng-click="reset()" />
+        </div>
+        <input class="btn btn-success" type="submit" value="Create Business" />
+      </div>
     </div>
-    <input class="btn btn-success" type="submit" value="Create Business" />
-  </div>
-</form>
+  </form>
 </div>
