client side order preparation

--- a/Webstack/client/index.html
+++ b/Webstack/client/index.html
@@ -86,6 +86,7 @@
           <script src="app/business/detail/detail.controller.js"></script>
           <script src="app/business/detail/print.controller.js"></script>
           <script src="app/business/detail/print.directive.js"></script>
+          <script src="app/business/orders/orders.controller.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.js"></script>
           <script src="app/main/main.controller.js"></script>
