Client side debug order placement

--- a/Webstack/client/app/business/create/create.html
+++ b/Webstack/client/app/business/create/create.html
@@ -30,7 +30,7 @@
           <li class="list-group-item clearfix">
             <div class="col-md-8">
               <p>Name: {{menuI.name}}
-              <br/>Description: {{menuI.desc}}
+              <br/>Description: {{menuI.description}}
               <br/>Price: {{menuI.price | currency:"&#8361;"}}
               </p>
             </div>
