--- a/Webstack/client/index.html
+++ b/Webstack/client/index.html
@@ -69,6 +69,7 @@
       <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
       <script src="bower_components/ng-file-upload-shim/ng-file-upload-shim.js"></script>
       <!-- endbower -->
+      <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
 
         <!-- build:js({.tmp,client}) app/app.js -->
@@ -87,6 +88,7 @@
           <script src="app/business/detail/print.controller.js"></script>
           <script src="app/business/detail/print.directive.js"></script>
           <script src="app/business/orders/orders.controller.js"></script>
+          <script src="app/business/orders/place.controller.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.js"></script>
           <script src="app/main/main.controller.js"></script>
