--- a/Webstack/client/app/business/orders/orders.html
+++ b/Webstack/client/app/business/orders/orders.html
@@ -8,6 +8,7 @@
       <h3>{{table.name}}</h3>
       <ul class="list-group">
         <li class="list-group-item">
+          <span class="pull-right">Current Bill: {{getBill(table)}}</span>
           <a href="#" ng-click="payOrders(table)"><span class="glyphicon glyphicon-shopping-cart"></span> Pay Orders</a>
         </li>
 <!--        Orders-->
