--- a/Webstack/client/app/main/main.html
+++ b/Webstack/client/app/main/main.html
@@ -4,29 +4,20 @@
   <div class="container">
     <h1>@Table</h1>
     <p class="lead">Reinventing ordering in reality!</p>
-    <!-- <img src="assets/images/yeoman.png" alt="I'm Yeoman"> -->
   </div>
 </header>
 
 <div class="container">
+  
+  <h1 class="text-center">Join and offer the special customer experience!</h1>
+
   <div class="row">
-    <div class="col-lg-12">
-      <div class="text-center">
-        <h1 class="page-header">Are you a ...?</h1>
-        <div class="row">
-          <div class="col-lg-3">
-          </div>
-          <div class="col-lg-3">
-            <a class="btn btn-default btn-block" href="/customer">Customer</a>
-          </div>
-          <div class="col-lg-3">
-            <a class="btn btn-default btn-block" href="/service">Business</a>
-          </div>
-        </div>
-      </div>
-      <!-- <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
-      <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul> -->
+    <div class="col-md-3 col-md-offset-3">
+      <a href="/signup" class="btn btn-success btn-lg btn-block">Sign up</a>
+    </div>
+    <div class="col-md-3"> 
+      <a href="/login" class="btn btn-primary btn-lg btn-block"">Login</a>
     </div>
   </div>
+
 </div>
