try fixing the buffer problems

--- a/Webstack/client/app/business/detail/detail.html
+++ b/Webstack/client/app/business/detail/detail.html
@@ -28,7 +28,7 @@
               <br/>
               <strong>Description:</strong> "{{menuitem.description}}"
             </div>
-            <img height="120px" ng-show="menuitem.pictureData != null" src="{{menuitem.pictureData}}"/>
+            <img height="120px" ng-show="menuitem.pictureData != null" ng-src="{{menuitem.pictureData}}"/>
           </div>
         </li>
       </ul>
