Fix picture parsing bug

--- a/Webstack/client/app/business/create/create.html
+++ b/Webstack/client/app/business/create/create.html
@@ -48,7 +48,7 @@
           <div class="col-md-6">
           <div ngf-drop ngf-select ng-model="menuIPic" class="drop-box" 
               ngf-drag-over-class="dragover" ngf-multiple="false" ngf-allow-dir="false"
-              ngf-accept="'.jpg,.png'" ngf-max-size='524288'>Click or drop image (jpg or png) here. <br/> For optimal results, use square image. (Max Size 512KB)</div>
+              ngf-accept="'.jpg,.png'" ngf-max-size='524288'>Click or drop image (jpg) here. <br/> For optimal results, use square image. (Max Size 512KB)</div>
           <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
           </div>
           <img ng-show='isMIPicture()' ngf-src="menuIPic[0]" ngf-accept="'.jpg,.png'" width='160px' height='160px'>
